# ultra-fast-zip

./: .gitignore  DEVELOPMENT.md  LICENSE  NOTICE.md  README.md  README_DIST.txt  UltraFastZip.bat  UltraFastZip.spec  benchmark.py  build.bat  package.bat  pyproject.toml  requirements.txt  setup.bat  ufz.bat  ufz.spec
app/: cli.py  main.py
app/core/: archive.py  formats.py  inspector.py  models.py  packer.py  unpacker.py
app/ui/: compress_tab.py  extract_tab.py  inspect_tab.py  main_window.py  settings_tab.py  theme.py  widgets.py
app/utils/: format_utils.py  logger.py  path_utils.py
app/workers/: inspect_worker.py  pack_worker.py  unpack_worker.py
docs/: format_comparison.md  manual.html
scripts/: bench_gen_dataset.py  bench_major.py  bench_multi.py  capture_screens.py  make_icon.py
tests/: test_archive.py  test_formats.py  test_pack_unpack.py
